@@ -6,7 +6,7 @@ import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Service;
 import ru.skypro.homework.dto.CommentDto;
 import ru.skypro.homework.dto.CommentsDto;
-import ru.skypro.homework.dto.CreateCommentDto;
+import ru.skypro.homework.dto.CreateOrUpdateCommentDto;
 import ru.skypro.homework.entity.Comment;
 import ru.skypro.homework.entity.User;
 import ru.skypro.homework.mapper.CommentMapper;
@@ -15,7 +15,7 @@ import ru.skypro.homework.repository.CommentRepository;
 import ru.skypro.homework.repository.UserRepository;
 import ru.skypro.homework.service.CommentService;
 
-import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class CommentServiceImpl implements CommentService {
@@ -33,67 +33,79 @@ public class CommentServiceImpl implements CommentService {
 
     /**
      * Приватный метод, который вытаскивает авторизованного пользователя
-     * @return возращает пользователя
+     *
+     * @return возвращает пользователя
      */
     private User getCurrentUser() {
         Authentication authenticationUser = SecurityContextHolder.getContext().getAuthentication();
         UserDetails principalUser = (UserDetails) authenticationUser.getPrincipal();
-        return userRepository.findByPassword(principalUser.getPassword());
+        return userRepository.findByEmail(principalUser.getUsername());
     }
 
     /**
      * Метод, который выводит все комментарии к определенному объявлению
+     *
      * @param adId (id объявления)
-     * @return возращает List комментариев
+     * @return возвращает List комментариев
      */
     @Override
-    public List<CommentsDto> getComments(Integer adId) {
-        return commentRepository
-                .findByAds_Pk(adId)
-                .stream()
-                .map(commentMapper::toDto)
-                .toList();
+    public CommentsDto getComments(Integer adId) {
+        return commentMapper.toCommentsDto(
+                commentRepository
+                        .findCommentsByAd_Pk(adId)
+                        .size(),
+                commentRepository
+                        .findCommentsByAd_Pk(adId)
+                        .stream()
+                        .map(commentMapper::toDto)
+                        .collect(Collectors.toList()));
     }
 
     /**
      * Метод, который добавляет комментарий к определенному объявлению
-     * @param adId  (id объявления)
-     * @param comment (текст комментария)
-     * @return
+     *
+     * @param adId    (id объявления)
+     * @param commentText (текст комментария)
+     * @return CommentDto (объект комментария)
      */
     @Override
-    public CommentDto addComment(Integer adId, CreateCommentDto comment) {
-        Comment entity = new Comment();
-        entity.setText(comment.getText());
-        entity.setCreatedAt(System.currentTimeMillis());
-        entity.setAuthor(getCurrentUser());
-        entity.setAd(adRepository.findById(adId).get());
-        commentRepository.save(entity);
-        return commentMapper.toDto(entity);
+    public CommentDto addComment(Integer adId, CreateOrUpdateCommentDto commentText) {
+        Comment comment = new Comment();
+        comment.setText(commentText.getText());
+        comment.setCreatedAt(System.currentTimeMillis());
+        comment.setAuthor(getCurrentUser());
+        comment.setAd(adRepository.findById(adId).get());
+
+        return commentMapper.toDto(commentRepository.save(comment));
     }
 
     /**
      * Метод, который удаляет комментарий
-     * @param adId (id объявления)
+     *
+     * @param adId      (id объявления)
      * @param commentId (id комментария)
      */
     @Override
     public void deleteComment(Integer adId, Integer commentId) {
-        commentRepository.deleteByAdsIdAndId(adId, commentId);
+        commentRepository.deleteCommentByAd_PkAndPk(adId, commentId);
     }
 
     /**
      * Метод, который изменяет текст комментария
-     * @param adId (id объявления)
+     *
+     * @param adId      (id объявления)
      * @param commentId (id комментария)
-     * @param comment (текст комментария)
-     * @return
+     * @param comment   (текст комментария)
+     * @return CommentDto (объект комментария)
      */
     @Override
-    public CommentDto updateComment(Integer adId, Integer commentId, CreateCommentDto comment) {
-        Comment entity = commentRepository.findByAdsIdAndId(adId, commentId);
+    public CommentDto updateComment(Integer adId,
+                                    Integer commentId,
+                                    CreateOrUpdateCommentDto comment) {
+        Comment entity = commentRepository.findCommentByAd_PkAndPk(adId, commentId);
         entity.setText(comment.getText());
-        commentRepository.save(entity);
-        return commentMapper.toDto(entity);
+
+        return commentMapper.toDto(commentRepository.save(entity));
     }
+
 }
